--- a/build.gradle
+++ b/build.gradle
@@ -2,20 +2,19 @@
 
 buildscript {
     repositories {
-        mavenCentral()
+
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
-        maven {
-            url 'https://maven.google.com/'
-        }
-        maven {
-            url "https://dl.bintray.com/tencentqcloudterminal/maven"
-        }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/google' }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/gradle-plugin' }
+        maven { url "https://jitpack.io" }
         google()
         jcenter()
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0'
+//        classpath 'com.android.tools.build:gradle:3.2.0'
+        classpath 'com.android.tools.build:gradle:3.6.0'
 
         /***************发布aar包的配置**********************/
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.0'
@@ -29,14 +28,12 @@ buildscript {
 
 allprojects {
     repositories {
-        mavenCentral()
+
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
-        maven {
-            url 'https://maven.google.com/'
-        }
-        maven {
-            url "https://dl.bintray.com/tencentqcloudterminal/maven"
-        }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/google' }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/gradle-plugin' }
+        maven { url "https://jitpack.io" }
         google()
         jcenter()
         
